--- a/src/views/policies/details/policy-page-title.scss
+++ b/src/views/policies/details/policy-page-title.scss
@@ -1,4 +1,4 @@
 .policy-resource-label {
   vertical-align: middle;
-  padding: 0 var(--pf-global--spacer--sm);
+  padding: 0 var(--pf-t--global--spacer--sm);
 }
