--- a/src/views/policies/list/components/PolicyEnactmentsDrawer/policy-enactments-drawer.scss
+++ b/src/views/policies/list/components/PolicyEnactmentsDrawer/policy-enactments-drawer.scss
@@ -1,5 +1,5 @@
 .policy-enactments-drawer__tabs__expandable-content {
-  margin-left: var(--pf-global--spacer--lg);
-  margin-bottom: var(--pf-global--spacer--md);
+  margin-left: var(--pf-t--global--spacer--lg);
+  margin-bottom: var(--pf-t--global--spacer--md);
   white-space: pre-wrap;
 }
