--- a/src/views/policies/new/new-policy.scss
+++ b/src/views/policies/new/new-policy.scss
@@ -2,12 +2,12 @@
   max-width: 700px;
 
   &__add-new-interface {
-    margin-left: var(--pf-global--spacer--sm);
+    margin-left: var(--pf-t--global--spacer--sm);
   }
 
   &__h1 {
     display: flex;
     justify-content: space-between;
-    margin-bottom: var(--pf-global--spacer--md);
+    margin-bottom: var(--pf-t--global--spacer--md);
   }
 }
