--- a/src/views/states/list/components/interfaces-popover-body.scss
+++ b/src/views/states/list/components/interfaces-popover-body.scss
@@ -4,7 +4,7 @@
 
   &__list-item {
     & > div > div {
-      padding: var(--pf-global--spacer--xs);
+      padding: var(--pf-t--global--spacer--xs);
     }
 
     .interface-button-name {
