--- a/src/views/hostnetworkconfiguration/components/TopologySidebar/TopologySidebar.scss
+++ b/src/views/hostnetworkconfiguration/components/TopologySidebar/TopologySidebar.scss
@@ -4,3 +4,10 @@
     margin-left: 20px;
   }
 }
+
+.networking-plugin-interface-drawer-yaml-footer {
+  position: sticky;
+  bottom: 0;
+  padding: var(--pf-t--global--spacer--md) 0;
+  background-color: var(--pf-v6-c-page__main-section--BackgroundColor);
+}
