--- a/src/views/hostnetworkconfiguration/components/TopologySidebar/TopologySidebar.scss
+++ b/src/views/hostnetworkconfiguration/components/TopologySidebar/TopologySidebar.scss
@@ -2,10 +2,11 @@
   &__content {
     margin-top: 24px;
     margin-left: 20px;
+    height: 100%;
   }
 }
 
-.networking-plugin-interface-drawer-yaml-footer {
+.nmstate-plugin-interface-drawer-yaml-footer {
   position: sticky;
   bottom: 0;
   padding: var(--pf-t--global--spacer--md) 0;
