--- a/src/utils/components/PolicyForm/PolicyWizard/policy-wizard.scss
+++ b/src/utils/components/PolicyForm/PolicyWizard/policy-wizard.scss
@@ -1,3 +1,5 @@
-.nmstate-policy-wizard .pf-v6-c-wizard__main-body {
-  padding-left: 0;
+.nmstate-policy-wizard {
+  .pf-v6-c-wizard__main-body {
+    padding-left: 0;
+  }
 }
