--- a/src/views/nodenetworkconfiguration/components/TopologySidebar/TopologySidebar.scss
+++ b/src/views/nodenetworkconfiguration/components/TopologySidebar/TopologySidebar.scss
@@ -15,7 +15,7 @@
 
 .pf-topology-side-bar.nmstate-topology__sidebar.big-sidebar {
   @media (min-width: 768px) {
-    max-width: 700px;
+    max-width: 100%;
   }
 }
 
