CNV-76072: Add success alert when creating another nncp through form
Signed-off-by: batyana <bnahmias@redhat.com>

--- a/src/views/nodenetworkconfiguration/components/TopologySidebar/TopologySidebar.scss
+++ b/src/views/nodenetworkconfiguration/components/TopologySidebar/TopologySidebar.scss
@@ -5,6 +5,15 @@
 
     &__content {
       height: 100%;
+      position: relative;
+    }
+
+    &__success-alert {
+      position: absolute;
+      top: var(--pf-t--global--spacer--sm);
+      right: var(--pf-t--global--spacer--md);
+      z-index: 1000;
+      max-width: 350px;
     }
   }
 
