CNV-66552:Mimic split screen behavior and drag-and-drop behavior in NNCP wizard/topology view

--- a/src/views/nodenetworkconfiguration/components/TopologySidebar/TopologySidebar.scss
+++ b/src/views/nodenetworkconfiguration/components/TopologySidebar/TopologySidebar.scss
@@ -22,6 +22,10 @@
   }
 }
 
+.nmstate-policy-wizard .pf-v6-c-wizard__main-body {
+  padding: 20px;
+}
+
 .pf-topology-side-bar.nmstate-topology__sidebar.big-sidebar {
   @media (min-width: 768px) {
     max-width: 100%;
